[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/player/extras/Explosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/enemies/EnemyPart.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/enemies/explosion/09enemyexplosion.wav" type="AudioStream" id=3]
[ext_resource path="res://game/enemies/ShootPosition.gd" type="Script" id=4]
[ext_resource path="res://game/bullets/BulletEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/sfx/enemies/shoot/11enemyshoot.wav" type="AudioStream" id=6]
[ext_resource path="res://game/bullets/Bomb.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "destroyed"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("DamageCollider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "animation"
tracks/4/path = NodePath("ExplosionFire/ExplosionPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": PoolStringArray( "explosion" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "init"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DamageCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemyPart" type="Area2D" groups=[
"enemy_part",
]]
z_index = 39
z_as_relative = false
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )
bullet = ExtResource( 5 )
bomb = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]

[node name="DamageCollider" type="CollisionPolygon2D" parent="."]

[node name="ExplosionFire2" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.25, 0.25 )

[node name="ExplosionFire" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )

[node name="ShootPositions" type="Node2D" parent="."]

[node name="ShootPosition" type="Position2D" parent="ShootPositions"]
script = ExtResource( 4 )

[node name="HitSFX" type="AudioStreamPlayer" parent="."]

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Enemy"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroyed = SubResource( 1 )
anims/init = SubResource( 2 )

[node name="GunTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Enemy"

[node name="BombPosition" type="Position2D" parent="."]

[node name="BombTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]

[editable path="ExplosionFire"]
